--- a/bot.ipynb
+++ b/bot.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,34 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'query': 'Wann hat Prof. Dr. Wildemann einen Verdiensorden erhalten?',\n",
-       " 'result': ' 2006 erhielt Professor Wildemann vom Bayerischen MinisterprÃ¤sidenten den Bayerischen Verdienstorden fÃ¼r seine herausragenden Leistungen in Wissenschaft und Industrie.',\n",
-       " 'source_documents': [Document(page_content='Staatsmedaille des Freistaates Bayern, das Bundesverdienstkreuz 1. Klasse der Bundesrepublik Deutschland und die EhrendoktorwÃ¼rden der UniversitÃ¤ten Klagenfurt, Passau und Cottbus verliehen. Seit 2004 ist er in die Logistik Hall of Fame aufgenommen worden. 2006 erhielt Professor Wildemann vom Bayerischen MinisterprÃ¤sidenten den Bayerischen Verdienstorden fÃ¼r seine herausragenden Leistungen in Wissenschaft und Industrie. Im Jahr 2008 wurde ihm die Ehrennadel der Bundesvereinigung Logistik', metadata={'source': 'scraper/html/tcw.de/tcw.de_unternehmen_sonstiges_prof-wildemann-4.html', 'filename': 'scraper/html/tcw.de/tcw.de_unternehmen_sonstiges_prof-wildemann-4.html', 'page_number': 1, 'category': 'NarrativeText'}),\n",
-       "  Document(page_content='Prof. Wildemann', metadata={'source': 'scraper/html/tcw.de/tcw.de_sitemap.html', 'filename': 'scraper/html/tcw.de/tcw.de_sitemap.html', 'page_number': 1, 'category': 'ListItem'}),\n",
-       "  Document(page_content='ordentlicher Professor fÃ¼r Betriebswirtschaftslehre an den UniversitÃ¤ten Bayreuth, Passau und seit 1989 an der Technischen UniversitÃ¤t MÃ¼nchen. Er hat Rufe an die UniversitÃ¤ten Stuttgart Hohenheim und Dortmund, an die Freie und die Technische UniversitÃ¤t Berlin, University of Southern California, Los Angeles, University of Indianapolis, Indianapolis, und an die Hochschule St. Gallen erhalten. Neben seiner LehrtÃ¤tigkeit steht Prof. Wildemann der Unternehmensberatung TCW Transfer-Centrum', metadata={'source': 'scraper/html/tcw.de/tcw.de_unternehmen_sonstiges_prof-wildemann-4.html', 'filename': 'scraper/html/tcw.de/tcw.de_unternehmen_sonstiges_prof-wildemann-4.html', 'page_number': 1, 'category': 'NarrativeText'}),\n",
-       "  Document(page_content='Univ.-Prof. Dr. Dr. h. c. mult. Horst Wildemann', metadata={'source': 'scraper/html/tcw.de/tcw.de_unternehmen_sonstiges_prof-wildemann-4.html', 'filename': 'scraper/html/tcw.de/tcw.de_unternehmen_sonstiges_prof-wildemann-4.html', 'page_number': 1, 'category': 'Title'})]}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_query = \"Wann hat Prof. Dr. Wildemann einen Verdiensorden erhalten?\"\n",
-    "\n",
-    "qa({\"query\":input_query})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,29 +167,162 @@
     "from langchain.chains.question_answering import load_qa_chain\n",
     "from langchain.chains.conversational_retrieval.prompts import CONDENSE_QUESTION_PROMPT\n",
     "from langchain.chains import ConversationalRetrievalChain\n",
+    "from langchain.memory import ConversationBufferMemory\n",
     "\n",
     "\n",
-    "llm = OpenAI(temperature=0)\n",
-    "question_generator = LLMChain(llm=llm, prompt=CONDENSE_QUESTION_PROMPT)\n",
-    "doc_chain = load_qa_chain(llm, chain_type=\"map_reduce\")\n",
+    "prompt_template = \"\"\"Use the following pieces of context to answer the question at the end.\n",
+    "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
+    "In case the question has multiple answers, formulate the answer in bullet points. \n",
     "\n",
-    "chain = ConversationalRetrievalChain(\n",
-    "    retriever=db.as_retriever(),\n",
-    "    question_generator=question_generator,\n",
-    "    combine_docs_chain=doc_chain,\n",
-    ")"
+    "{context}\n",
+    "\n",
+    "Question: {question}\n",
+    "Answer in German:\"\"\"\n",
+    "PROMPT = PromptTemplate(\n",
+    "    template=prompt_template, input_variables=[\"context\", \"question\"]\n",
+    ") \n",
+    "\n",
+    "chain_type_kwargs = {\"prompt\": PROMPT}\n",
+    "\n",
+    "def get_chat_history(inputs) -> str:\n",
+    "    res = []\n",
+    "    for human, ai in inputs:\n",
+    "        res.append(f\"Human: {human}\\nAI: {ai}\")\n",
+    "    return \"\\n\".join(res)\n",
+    "\n",
+    "chat_history = []\n",
+    "memory = ConversationBufferMemory(memory_key=\"chat_history\", return_messages=True)\n",
+    "\n",
+    "qa = ConversationalRetrievalChain.from_llm(llm = OpenAI(temperature=0),\n",
+    "                                           retriever = db.as_retriever(),\n",
+    "                                           qa_prompt=PROMPT,\n",
+    "                                           chain_type=\"stuff\", \n",
+    "                                           return_source_documents = False, \n",
+    "                                           memory = memory, \n",
+    "                                           #get_chat_history=get_chat_history, \n",
+    "                                           verbose = True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[HumanMessage(content='Wer ist Prof. Dr. Wildemann?', additional_kwargs={}),\n",
+       " AIMessage(content=' \\nProf. Dr. Wildemann ist ein ordentlicher Professor für Betriebswirtschaftslehre an den Universitäten Bayreuth, Passau und seit 1989 an der Technischen Universität München. Er hat Maschinenbau (Dipl.-Ing.) und Betriebswirtschaftslehre (Dipl.-Kfm.) an der Universität Aachen und Köln studiert und promovierte 1974 zum Dr. rer. pol. Er habilitierte sich 1980 an der Universität zu Köln (Dr. habil.).', additional_kwargs={}),\n",
+       " HumanMessage(content='Hat er Auszeichnungen erhalten?', additional_kwargs={}),\n",
+       " AIMessage(content=' \\n- Staatsmedaille des Freistaates Bayern \\n- Bundesverdienstkreuz 1. Klasse der Bundesrepublik Deutschland \\n- Ehrendoktorwürden der Universitäten Klagenfurt, Passau und Cottbus \\n- Logistik Hall of Fame \\n- Bayerischen Verdienstorden \\n- Ehrennadel der Bundesvereinigung Logistik', additional_kwargs={})]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "chat_history = []\n",
-    "query = \"Wo hat Prof. Dr. Wildemann studiert?\"\n",
-    "result = chain({\"question\": query, \"chat_history\": chat_history})\n",
-    "chat_history.append((query, result[\"answer\"]))"
+    "memory.chat_memory.messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new ConversationalRetrievalChain chain...\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'question': 'Wer ist Prof. Dr. Wildemann?',\n",
+       " 'chat_history': [HumanMessage(content='Wer ist Prof. Dr. Wildemann?', additional_kwargs={}),\n",
+       "  AIMessage(content=' \\nProf. Dr. Wildemann ist ein ordentlicher Professor für Betriebswirtschaftslehre an den Universitäten Bayreuth, Passau und seit 1989 an der Technischen Universität München. Er hat Maschinenbau (Dipl.-Ing.) und Betriebswirtschaftslehre (Dipl.-Kfm.) an der Universität Aachen und Köln studiert und promovierte 1974 zum Dr. rer. pol. Er habilitierte sich 1980 an der Universität zu Köln (Dr. habil.).', additional_kwargs={})],\n",
+       " 'answer': ' \\nProf. Dr. Wildemann ist ein ordentlicher Professor für Betriebswirtschaftslehre an den Universitäten Bayreuth, Passau und seit 1989 an der Technischen Universität München. Er hat Maschinenbau (Dipl.-Ing.) und Betriebswirtschaftslehre (Dipl.-Kfm.) an der Universität Aachen und Köln studiert und promovierte 1974 zum Dr. rer. pol. Er habilitierte sich 1980 an der Universität zu Köln (Dr. habil.).'}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"Wer ist Prof. Dr. Wildemann?\"\n",
+    "result = qa({\"question\": query, \"chat_history\" : chat_history})\n",
+    "#chat_history.append((query, result[\"answer\"]))\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new ConversationalRetrievalChain chain...\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'question': 'Hat er Auszeichnungen erhalten?',\n",
+       " 'chat_history': [HumanMessage(content='Wer ist Prof. Dr. Wildemann?', additional_kwargs={}),\n",
+       "  AIMessage(content=' \\nProf. Dr. Wildemann ist ein ordentlicher Professor für Betriebswirtschaftslehre an den Universitäten Bayreuth, Passau und seit 1989 an der Technischen Universität München. Er hat Maschinenbau (Dipl.-Ing.) und Betriebswirtschaftslehre (Dipl.-Kfm.) an der Universität Aachen und Köln studiert und promovierte 1974 zum Dr. rer. pol. Er habilitierte sich 1980 an der Universität zu Köln (Dr. habil.).', additional_kwargs={}),\n",
+       "  HumanMessage(content='Hat er Auszeichnungen erhalten?', additional_kwargs={}),\n",
+       "  AIMessage(content=' \\n- Staatsmedaille des Freistaates Bayern \\n- Bundesverdienstkreuz 1. Klasse der Bundesrepublik Deutschland \\n- Ehrendoktorwürden der Universitäten Klagenfurt, Passau und Cottbus \\n- Logistik Hall of Fame \\n- Bayerischen Verdienstorden \\n- Ehrennadel der Bundesvereinigung Logistik', additional_kwargs={})],\n",
+       " 'answer': ' \\n- Staatsmedaille des Freistaates Bayern \\n- Bundesverdienstkreuz 1. Klasse der Bundesrepublik Deutschland \\n- Ehrendoktorwürden der Universitäten Klagenfurt, Passau und Cottbus \\n- Logistik Hall of Fame \\n- Bayerischen Verdienstorden \\n- Ehrennadel der Bundesvereinigung Logistik'}"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"Hat er Auszeichnungen erhalten?\"\n",
+    "result = qa({\"question\": query, \"chat_history\" : chat_history})\n",
+    "#chat_history.append((query, result[\"answer\"]))\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[HumanMessage(content='Wer ist Prof. Dr. Wildemann?', additional_kwargs={}),\n",
+       " AIMessage(content=' \\nProf. Dr. Wildemann ist ein ordentlicher Professor für Betriebswirtschaftslehre an den Universitäten Bayreuth, Passau und seit 1989 an der Technischen Universität München. Er hat Maschinenbau (Dipl.-Ing.) und Betriebswirtschaftslehre (Dipl.-Kfm.) an der Universität Aachen und Köln studiert und promovierte 1974 zum Dr. rer. pol. Er habilitierte sich 1980 an der Universität zu Köln (Dr. habil.).', additional_kwargs={}),\n",
+       " HumanMessage(content='Hat er Auszeichnungen erhalten?', additional_kwargs={}),\n",
+       " AIMessage(content=' \\n- Staatsmedaille des Freistaates Bayern \\n- Bundesverdienstkreuz 1. Klasse der Bundesrepublik Deutschland \\n- Ehrendoktorwürden der Universitäten Klagenfurt, Passau und Cottbus \\n- Logistik Hall of Fame \\n- Bayerischen Verdienstorden \\n- Ehrennadel der Bundesvereinigung Logistik', additional_kwargs={})]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[\"chat_history\"]"
    ]
   },
   {
@@ -227,130 +333,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"Hat er in seiner Karriere Auszeichnungen erhalten?\"\n",
-    "result = chain({\"question\": query, \"chat_history\": chat_history})\n",
-    "chat_history.append((query, result[\"answer\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new ConversationalRetrievalChain chain...\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'question': 'Hat er in seiner Karriere Auszeichnungen erhalten?',\n",
-       " 'chat_history': [('Wo hat Prof. Dr. Wildemann studiert?',\n",
-       "   ' Prof. Dr. Wildemann hat in Aachen und Köln Maschinenbau (Dipl.-Ing.) und Betriebswirtschaftslehre (Dipl.-Kfm.) studiert.'),\n",
-       "  ('Hat er in seiner Karriere Auszeichnungen erhalten?',\n",
-       "   ' Yes, Prof. Dr. Wildemann has received awards in his career, including the prestigious German Research Foundation Prize.')],\n",
-       " 'answer': ' Yes, Prof. Dr. Wildemann has received awards in his career, including the prestigious German Research Foundation Prize.'}"
+       "{'question': 'Über wen reden wir?',\n",
+       " 'chat_history': [],\n",
+       " 'answer': ' Wir reden über Mehr Infos zum Thema.'}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "query = \"Über wen reden wir?\"\n",
+    "result = qa({\"question\": query, \"chat_history\" : chat_history})\n",
+    "#chat_history.append((query, result[\"answer\"]))\n",
     "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chains import ConversationalRetrievalChain\n",
-    "qa_conv = ConversationalRetrievalChain.from_llm(OpenAI(temperature=0), db.as_retriever(), qa_prompt=PROMPT, chain_type=\"stuff\")\n",
-    "chat_history = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "query = \"Wann kam Prof. Dr. Wildemann an die TU München?\"\n",
-    "result = qa_conv({\"question\": query, \"chat_history\": chat_history})\n",
-    "chat_history.append((query, result[\"answer\"]))\n",
-    "\n",
-    "#query = \"Did he mention who she suceeded\"\n",
-    "#result = qa_conv({\"question\": query, \"chat_history\": chat_history})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"Wo hat Prof. Dr. Wildemann studiert?\"\n",
-    "result = qa_conv({\"question\": query, \"chat_history\": chat_history})\n",
-    "chat_history.append((query, result[\"answer\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"Hat er einen Vedienstorden erhalten?\"\n",
-    "result = qa_conv({\"question\": query, \"chat_history\": chat_history})\n",
-    "chat_history.append((query, result[\"answer\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'question': 'Hat er einen Vedienstorden erhalten?',\n",
-       " 'chat_history': [('Wann kam Prof. Dr. Wildemann an die TU München?', ' 1989'),\n",
-       "  ('Wo hat Prof. Dr. Wildemann studiert?',\n",
-       "   ' Er hat in Aachen und Köln Maschinenbau (Dipl.-Ing.) und Betriebswirtschaftslehre (Dipl.-Kfm.) studiert.'),\n",
-       "  ('Hat er einen Vedienstorden erhalten?',\n",
-       "   ' Ja, er hat 2006 vom Bayerischen Ministerpräsidenten den Bayerischen Verdienstorden erhalten.')],\n",
-       " 'answer': ' Ja, er hat 2006 vom Bayerischen Ministerpräsidenten den Bayerischen Verdienstorden erhalten.'}"
+       "'Human: Wer ist Prof. Dr. Wildemann?\\nAI:  \\nProf. Dr. Wildemann ist ein ordentlicher Professor für Betriebswirtschaftslehre an den Universitäten Bayreuth, Passau und seit 1989 an der Technischen Universität München. Er hat Maschinenbau (Dipl.-Ing.) und Betriebswirtschaftslehre (Dipl.-Kfm.) an der Universität Aachen und Köln studiert und promovierte 1974 zum Dr. rer. pol. Er habilitierte sich 1980 an der Universität zu Köln (Dr. habil.).'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result"
+    "pruiget_chat_history(chat_history)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Wann kam Prof. Dr. Wildemann an die TU München?', ' 1989'),\n",
-       " ('Wo hat Prof. Dr. Wildemann studiert?',\n",
-       "  ' Er hat in Aachen und Köln Maschinenbau (Dipl.-Ing.) und Betriebswirtschaftslehre (Dipl.-Kfm.) studiert.'),\n",
-       " ('Hat er einen Vedienstorden erhalten?',\n",
-       "  ' Ja, er hat 2006 vom Bayerischen Ministerpräsidenten den Bayerischen Verdienstorden erhalten.')]"
+       "[[('Wer ist Prof. Dr. Wildemann?',\n",
+       "   ' \\nProf. Dr. Wildemann ist ein ordentlicher Professor für Betriebswirtschaftslehre an den Universitäten Bayreuth, Passau und seit 1989 an der Technischen Universität München. Er hat Maschinenbau (Dipl.-Ing.) und Betriebswirtschaftslehre (Dipl.-Kfm.) an der Universität Aachen und Köln studiert und promovierte 1974 zum Dr. rer. pol. Er habilitierte sich 1980 an der Universität zu Köln (Dr. habil.).')]]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,13 +410,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Human: Wer ist Prof. Dr. Wildemann?\n",
+      "AI:  \n",
+      "Prof. Dr. Wildemann ist ein ordentlicher Professor für Betriebswirtschaftslehre an den Universitäten Bayreuth, Passau und seit 1989 an der Technischen Universität München. Er hat Maschinenbau (Dipl.-Ing.) und Betriebswirtschaftslehre (Dipl.-Kfm.) an der Universität Aachen und Köln studiert und promovierte 1974 zum Dr. rer. pol. Er habilitierte sich 1980 an der Universität zu Köln (Dr. habil.).\n"
+     ]
+    }
+   ],
    "source": [
-    "chat_history = [(query, result[\"answer\"])]\n",
-    "query = \"Did he mention who she suceeded\"\n",
-    "result = qa({\"question\": query, \"chat_history\": chat_history})"
+    "print(result[\"chat_history\"][0])"
    ]
   },
   {
