--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -319,8 +319,16 @@
     "     relevant_content = retrieve_relevant_content()\n",
     "     print(\"Relevent content retrieved!\")\n",
     "     create_vector_db(relevant_content)\n",
-    "     print(\"ChromaDB successfully created!\")\n",
-    "\n"
+    "     print(\"ChromaDB successfully created!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "webscraper()"
    ]
   },
   {
